hphp/hack/test/sound_dynamic/typing/return_like_enforced.bad.php.exp
File "return_like_enforced.bad.php", line 8, characters 1-30:
Cannot redeclare `get()` (previously declared in return_like_enforced.bad.php:5) (Parsing[1002])
File "return_like_enforced.bad.php", line 8, characters 10-12:
Name already bound: `get` (Naming[2012])
  File "return_like_enforced.bad.php", line 5, characters 10-12:
  Previous definition is here
File "return_like_enforced.bad.php", line 13, characters 10-11:
Invalid return type (Typing[4110])
  File "return_like_enforced.bad.php", line 11, characters 24-31:
  Expected `vec<int>`
  File "return_like_enforced.bad.php", line 5, characters 22-24:
  But got `int`
